add config server

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -4,3 +4,11 @@ server:
 spring:
   application:
     name: config-server
+
+
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/joaquinBrassinne/final-tp-microservices.git
+          
